2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp:
	
	Decrease maximum progress update to 0.5s

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* lib/Makefile.am:
	
	Fix the build.

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-shell.c: (ephy_embed_shell_set_page_setup),
	(ephy_embed_shell_set_print_settings):
	
	Fix the build.

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	
	Remove accel for ViewToolbar. Bug #328783.

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-shell.c: (ephy_embed_shell_set_page_setup),
	(ephy_embed_shell_get_page_setup),
	(ephy_embed_shell_set_print_settings),
	(ephy_embed_shell_get_print_settings):
	A lib/ephy-print-utils.c:
	A lib/ephy-print-utils.h:
	* lib/ephy-string.c: (ephy_string_flags_from_string),
	(ephy_string_flags_to_string), (ephy_string_enum_from_string),
	(ephy_string_enum_to_string):
	* lib/ephy-string.h:

	Persist print settings and page setup.

2006-07-26  Luca Ferretti  <elle.uca@libero.it>

	* lib/ephy-stock-icons.c:
	* lib/ephy-stock-icons.h:
	* src/ephy-window.c:

	Define STOCK_NEW_WINDOW with named icon "window-new" and use it
	in File -> New Window. Use "tab-new", "bookmark-new" and 
	"mail-forward" named icons from Icon Naming Standard for related
	actions. A first step to fix bug # 348350
	
2006-07-24  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* lib/ephy-spell-check.c: (ephy_spell_check_init):

	Set default dictionary based on applicable locale names.

2006-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/certificate-dialogs.glade:
	
	Make this a vbox, not a table.

2006-07-24  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-password-dialog.c:
	
	Fix default activation.
	
	* data/glade/form-signing-dialog.glade:
	* embed/mozilla/GeckoFormSigningDialog.cpp:
	
	Fix content packing options.

2006-07-24  Christian Persch  <chpe@cvs.gnome.org>
