@@ -322,6 +322,17 @@
         </locale>
       </schema>
       <schema>
+        <key>/schemas/apps/epiphany/dialogs/print_frames</key>
+        <applyto>/apps/epiphany/dialogs/print_frames</applyto>
+        <owner>epiphany</owner>
+        <type>string</type>
+        <default>normal</default>
+        <locale name="C">
+        <short>How to print frames</short>
+        <long>How to print pages containing frames. Allowed values are "normal", "separately" and "selected".</long>
+        </locale>
+      </schema>
+      <schema>
         <key>/schemas/apps/epiphany/directories/open</key>
         <applyto>/apps/epiphany/directories/open</applyto>
         <owner>epiphany</owner>
