@@ -1,5 +1,11 @@
 2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* data/epiphany.schemas.in:
+	
+	Document the print_frames key.
+
+2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/MozDownload.cpp:
 	
 	Decrease maximum progress update to 0.5s
